<resources>
    <string name="app_name">MusiQuest</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">LOGIN</string>
    <string name="registerButton">REGISTER</string>
    <string name="sign_up">SIGN UP</string>
    <string name="account_type">Account Type</string>
    <string name="email">Email</string>
    <string name="newPassword">Password</string>
    <string name="passwordReqs">Password must contain: 8 Or More Characters, At Least One Number, At Lease One Special Character</string>
    <string name="login_instead">LOGIN INSTEAD</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="play_home">PLAY</string>
    <string name="home_home">HOME</string>
    <string name="notifications_home">ALERTS</string>
    <string name="dashboard_home">DASHBOARD</string>
    <string name="show_credentials">Show Credentials</string>
    <string name="your_map_preview">Your Map Preview</string>
    <string name="live_chat_button">Live Chat</string>
</resources>