<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/musiquest_background"
    tools:context=".LoginPage">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@drawable/text_boxes"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <EditText
        android:inputType="textPersonName"
        android:id="@+id/Username"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/text_boxes"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:autofillHints=""/>

    <EditText
        android:inputType="textPassword"
        android:id="@+id/Password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_boxes"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHighlight="@color/cardview_dark_background"
        android:autofillHints=""/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/seafoam"
        android:text="@string/loginButton"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:strokeWidth="2dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:text="@string/registerButton"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="15dp"
        app:strokeWidth="2dp"/>

</LinearLayout>